[gd_scene load_steps=4 format=3 uid="uid://main_scene_001"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://paddle_scene_001" path="res://scenes/Paddle.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://ball_scene_001" path="res://scenes/Ball.tscn" id="3"]

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
offset_right = 800.0
offset_bottom = 600.0
color = Color(0.04, 0.04, 0.1, 1)

[node name="BrickContainer" type="Node2D" parent="."]

[node name="Paddle" parent="." instance=ExtResource("2")]
position = Vector2(400, 550)

[node name="Ball" parent="." instance=ExtResource("3")]
position = Vector2(400, 520)

[node name="Walls" type="Node2D" parent="."]

[node name="LeftWall" type="StaticBody2D" parent="Walls"]
position = Vector2(0, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/LeftWall"]
shape = SubResource("RectangleShape2D_left")

[node name="RightWall" type="StaticBody2D" parent="Walls"]
position = Vector2(800, 300)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/RightWall"]
shape = SubResource("RectangleShape2D_right")

[node name="TopWall" type="StaticBody2D" parent="Walls"]
position = Vector2(400, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/TopWall"]
shape = SubResource("RectangleShape2D_top")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TopPanel" type="HBoxContainer" parent="HUD"]
offset_left = 10.0
offset_top = 10.0
offset_right = 790.0
offset_bottom = 40.0
theme_override_constants/separation = 50

[node name="ScoreLabel" type="Label" parent="HUD/TopPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0.831, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Score: 0"

[node name="HighScoreLabel" type="Label" parent="HUD/TopPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Best: 0"

[node name="LivesLabel" type="Label" parent="HUD/TopPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.267, 0.267, 1)
theme_override_font_sizes/font_size = 20
text = "Lives: 3"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_left"]
size = Vector2(20, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_right"]
size = Vector2(20, 600)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_top"]
size = Vector2(800, 20)